src/scss/home.scss
/* ... */
.home-popup__body__subtitle{ 
  font-size: 0.75rem;
  font-weight: 300;
  padding: 30px 0 20px 0;
  text-align: center;
}

.home-popup__body__offer{
  font-size: 2.2rem;
  font-weight: 700;
  padding: 24px 0 0 0;
  text-align: center;
  line-height: 0.9;
}

.home-popup__body__forms{
  padding-top: 50px;
  font-size: 12px;
}

.home-popup__forms__input{
  height: 100%;
  width: 100%;
  padding: 0 15px;
  border: 1px solid #ccc;
  font-size: 12px;
  margin-bottom: 15px;
  border-radius: 0px!important;
}

.forms-popup-news{
  display: flex;
  justify-content: center;
}

.home-popup__forms__submit{
  font-size: 12px;
  padding: 10px 20px;
  font-family:  "Helvetica Neue LT", sans-serif;;
  color:black;
  background-color: white;
  border: none;
  cursor: pointer;

  border: white 1px solid;

  &:hover{
    background-color: #ccc;
  }

  &:active{
    background-color: black;
    color: white;
    border: 1px solid white;

  }
}

.home-popup__body__terms{
  font-size: 0.6rem;
  font-weight: 200;
  font-style: italic;
  padding: 10px 0;
  text-align: center;
}

// Home Pop-up Image
// .home-popup-image{
//   z-index: 1000;
//   background-color: black;
//   color:white;
//   position: fixed;
//   top: 50%;
//   left: 50%;
//   transform: translate(-51%, -50%);
//   width: 500px;
//   height: auto;
//   object-fit: cover;
//   @media (max-width: 1280px) {
//     width: 350px;
//   }
// }

.home-popup-image{
  z-index: 1000;
  background-color: black;
  color:white;
  padding: 20px;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 500px;
  height: auto;
  object-fit: cover;
  @media (max-width: 1280px) {
    width: 350px;
  }
}


.home-popup-image__close{
  position: absolute;
  top: 0;
  right: 0;
  color: white;
  background-color: transparent;
  border:none;
  font-size: 3rem;
  cursor: pointer;
  @media (max-width: 1280px) {
    font-size: 2rem;
  }

}


.wpcf7-spinner{
  display: none!important;
}

.wpcf7-not-valid-tip{
  display: none!important;
}



#overlay{
  // display: none!important;
  width: 100vw;
  height: 100vh;
  z-index: 999;
  position: fixed;
  top: 0; 
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
}


.home-grid-2 {
  background-color: black;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas: "featured featured second" "featured featured third";
  height: 64vw;
  @media (min-aspect-ratio: 5/4) {
    height: calc(98vh - 58px);
  }
  @media (max-width: 768px) {
    display: block;
    height: auto;
    padding: 0px;
  }

  section {
    max-height: 100%;
    position: relative;
    overflow: hidden;
    cursor: pointer;
    @media (max-width: 768px) {
      height: 100vw;
    }

    &:nth-child(1) {
      grid-area: featured;
      @media (max-width: 768px) {
        height: calc(100vh - 58px);
      }

      .layer {
        top: 70%;
        left: 10%;
        width: 27vw;
        position: absolute;
        bottom: auto;
        padding: 6vw 0;
        margin: 0 7.8125vw;
        z-index: 1;
        text-align: left;

        @media (max-width: 768px) {
          left: 0;
        }

        h5 {
          font-size: 2.8125vw;
        }

        p {
          font-size: 18px;
        }
      }
    }

    &:nth-child(2) {
      grid-area: second;
      @media (max-width: 768px) {
        object-fit: cover;
      }

    }

    &:nth-child(3) {
      grid-area: third;

      img {
        object-position: top;

          @media (max-width: 768px) {
          object-fit: cover;
        }
      }
    }

    picture {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;

      img {
        width: 100%;
        height: 100%;
      }
    }

    .layer {
      width: 100%;
      top: 55%;
      position: absolute;
      bottom: auto;
      margin: 3.92857rem 0 0;
      z-index: 1;
      transform: none;
      left: 0;    
      text-align: center;
      @media (max-width: 768px) {
        left: 0;
        width: 100% !important;
        padding: 1.75rem 1.25rem !important;
        margin: 0 !important;
      }

      h5 {
        font-size: 1.28571rem;
        color: #fff;
        margin-bottom: 1.42857rem;
        text-transform: uppercase;
        line-height: .85em;
        letter-spacing: -.05em;
        font-family: $titleFont;
        @media (max-width: 768px) {
          font-size: 2.25rem !important;
          margin-bottom: 1.5rem;
          text-align: center ;
        }
      }

      p {
        color: #fff;
        font-size: 14px;
        line-height: 1;
        margin-bottom: 1.42857rem;
        @media (max-width: 768px) {
          font-size: .85rem;
          text-align: center;
        }
      }

      .cta-wrapper {
        .cta {
          display: inline-block;
          @include btn(#000, #f6f6f6, #fff);
          @media (max-width: 768px) {
            width: 100%;
          }
        }
      }
    }
  }
}

.home-grid-2__img{
  width: 100%!important;
  height: 100%!important;
}

.button__banner{
  background-color: #FF7E00;
  color: black;
  font-size:1.8rem;
  position: absolute;
  top: 75%;
  left: 35%;
  width: 300px!important;

  @media (max-width: 758px) {
    top: 70%;
    left: 28%;
    width: 200px!important;
    font-size: 1.3rem;

  }
}

.home-grid__social{
  z-index: 99;
  position: absolute;
  top: 45%;
  left: 1%;
  display: flex;
  flex-direction: column;
  gap:10px;
  @media (max-width: 1280px) {
    display: none;
  }
}

.home-grid__social__item{
  display: flex;
  align-items: center;
  padding: 2px;
  height: auto;
  background-color: transparent;
  border-radius: 50%;

  &:hover{
    background-color: white;
    -webkit-transition: background-color 300ms linear;
    -ms-transition: background-color 300ms linear;
    transition: background-color 300ms linear;
  }


}

.home-grid__social__item--name{
  width: 100%;
  border-radius: 0px;
}
/* ... */

